--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -1,7 +1,7 @@
   main#projects {
     width: 54%;
     max-width: 54vw;
-    min-height: 3200px;
+    min-height: 100vh;
     /* or a realistic lowest bound for long content */
     margin: 5em auto;
     padding: 2em 1em;
@@ -152,11 +152,12 @@
   .author-bio-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: #000;
     width: 100%;
     max-width: 100vw;
     height: auto;
-    min-height: 44rem;
   }
 
   .author-bio-container img {
@@ -164,11 +165,9 @@
     width: 60%;
     max-width: 60vw;
     height: auto;
-    object-fit: contain;
     padding: 1em;
     box-sizing: border-box;
     margin: 0 auto;
-    max-width: 472;
   }
 
   .images2 {
@@ -229,18 +228,8 @@
     min-height: 100vh;
   }
 
-  .vision-container,
-  .past-meets-design {
-    min-height: 47rem;
-  }
-
-  .vision,
-  .past-meets-future {
-    min-height: 44rem;
-  }
-
   .vision picture {
-    max-width: 814;
+    max-width: 814px;
   }
 
   .vision img {
@@ -443,11 +432,11 @@
   }
 
   .project-links .explore-container .click-me {
-    margin: 2em auto
+    margin: 2em auto;
   }
 
   .hidden {
-    display: none
+    display: none;
   }
 
   .takeme-text {
@@ -628,7 +617,7 @@
 
     .author-bio-text,
     .cta-section img {
-      margin: 1em auto
+      margin: 1em auto;
     }
 
     .author-bio-text h3 {
@@ -644,7 +633,8 @@
     }
 
     .author-bio-text {
-      width: 98%
+      width: 98%;
+      max-width: 98vw;
     }
 
     .list-items ul li {
@@ -764,7 +754,7 @@
 
     main#projects {
       width: 90%;
-      max-width: 90%;
+      max-width: 90vw;
       margin: 2em auto 2em;
     }
 
@@ -832,7 +822,7 @@
       border: .2em solid #fff;
       margin: .5em auto;
       width: 96%;
-      max-width: 100%;
+      max-width: 96vw;
       height: auto;
       padding: .9375em 0
     }
@@ -840,6 +830,7 @@
     .article-global-container,
     .resume-border {
       width: 100%;
+      max-width: 100vw;
       height: auto;
     }
 
