--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -343,8 +343,10 @@ footer {
 }
 
 .social-media ul li img {
-  width: 40px;
-  height: 40px;
+  max-width: 40px;
+  width: 100%;
+  height: auto;
+  display: block;
   object-fit: contain;
   transition: transform .3s ease;
   background-color: #000;
