--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -392,13 +392,18 @@ footer {
 }
 
 .hamburger-icon {
+  max-width: 48px;
   width: 48px;
   height: 48px;
-  min-width: 48px;
-  min-height: 48px;
-  aspect-ratio: 1 / 1;
-  object-fit: contain;
   display: none;
+}
+
+.menu-toggle img {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  padding: 0.25em;
 }
 
 #back-to-top {
