--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -63,6 +63,7 @@ p {
   line-height: 1.34
 }
 
+nav ul li,
 body,
 p,
 li,
@@ -81,7 +82,6 @@ h1,
 
 h2,
 h3,
-nav,
 .btn,
 label {
   font-family: Georgia, serif;
@@ -208,8 +208,8 @@ nav {
   align-items: center;
   justify-content: flex-end;
   min-height: 4rem;
-  width: 100%;
-  max-width: 100%;
+  width: 80%;
+  max-width: 80vw;
   box-sizing: border-box;
   position: relative;
   overflow: hidden;
@@ -219,10 +219,11 @@ nav {
 .nav-links ul {
   display: flex;
   align-items: center;
-  gap: 4vw;
+  justify-content: flex-end;
+  gap: 2rem;
+  min-height: 2.5rem;
   list-style-type: none;
   height: auto;
-  min-height: 3.5rem;
   line-height: 1.6;
   flex-wrap: nowrap;
   padding: 1em 2em 0 0;
@@ -243,12 +244,13 @@ nav {
 }
 
 .nav-logo {
-  max-width: 130px;
+  max-width: 200px;
   overflow: hidden;
+  height: auto;
   justify-content: center;
   align-items: center;
   background-color: #000;
-  margin-left: 3em;
+  padding-left: 2em;
 }
 
 .nav-logo img {
@@ -257,7 +259,7 @@ nav {
   min-height: 80px;
   display: block;
   object-fit: contain;
-  padding: .5em;
+  padding: 0.5em;
 }
 
 .footer-logo {
