--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -245,21 +245,21 @@ nav {
 
 .nav-logo {
   max-width: 200px;
+  max-height: auto;
   overflow: hidden;
   height: auto;
   justify-content: center;
   align-items: center;
   background-color: #000;
-  padding-left: 2em;
+  margin-left: 1em;
 }
 
 .nav-logo img {
   width: 100%;
   height: auto;
-  min-height: 80px;
   display: block;
   object-fit: contain;
-  padding: 0.5em;
+  padding: 1em;
 }
 
 .footer-logo {
