--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -40,14 +40,14 @@
     background-color: #fff;
     width: 98%;
     padding: 1em;
-    min-height: 11rem;
+    min-height: 8rem;
   }
 
   .project-title h2 {
     font-size: clamp(1rem, 2.5rem, 3rem);
     height: auto;
     width: 100%;
-    line-height: 1.6;
+    line-height: 1.5;
   }
 
   .project-sub-title {
@@ -223,10 +223,6 @@
 
   #description {
     margin: 2em auto;
-  }
-
-  .website-grade picture {
-    max-width: 814px;
   }
 
   .past-meets-future picture {
@@ -465,6 +461,11 @@
   }
 
   @media (max-width:768px) {
+
+    #description {
+      margin: 1em auto;
+    }
+
     .vision-container {
       margin: 2em auto 3em;
     }
@@ -495,7 +496,7 @@
 
     .project-title h2,
     .project-title h3 {
-      min-height: 4.5rem;
+      min-height: 2.5rem;
       font-display: swap;
     }
 
