--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -31,7 +31,7 @@
   }
 
   .casestudy {
-    min-height: 100vh;
+    min-height: auto;
     visibility: visible;
     opacity: 1;
     transition: none;
