--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -1,7 +1,7 @@
+  main#casestudy,
   main#projects {
     width: 54%;
     max-width: 54vw;
-    min-height: 100vh;
     margin: 5em auto;
     padding: 2em 1em;
     background-color: #000;
@@ -14,20 +14,12 @@
     overflow-anchor: none;
   }
 
+  main#projects {
+    min-height: 242rem;
+  }
+
   main#casestudy {
-    width: 54%;
-    max-width: 54vw;
-    min-height: 100vh;
-    margin: 5em auto;
-    padding: 2em 1em;
-    background-color: #000;
-    box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1);
-    contain: layout paint style;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    position: relative;
-    overflow-anchor: none;
+    min-height: 490rem;
   }
 
   body {
@@ -93,12 +85,6 @@
     height: auto;
     width: 100%;
     line-height: 1.3;
-  }
-
-  .author-bio-container img {
-    aspect-ratio: 1664 / 730;
-    object-fit: contain;
-    display: block;
   }
 
   .author-bio-text h3 {
