--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -23,7 +23,7 @@
   }
 
   body {
-    min-height: 100vh;
+    contain: layout style;
   }
 
   .casestudy {
@@ -108,7 +108,19 @@
   #section1 {
     margin: 4em auto;
     padding: 1em 4em;
-    min-height: 100vh;
+    min-height: 100rem;
+  }
+
+  .list-items {
+    height: auto;
+    min-height: 5rem;
+    width: 100%;
+    max-width: 100vw;
+    content: cotnent;
+  }
+
+  .list-items h3 {
+    line-height: 1.4;
   }
 
   #section2 h2,
@@ -512,10 +524,16 @@
       margin-top: 2em;
     }
 
-    .article-global-container,
+    article,
     .resume-border {
       width: 100%;
+      max-width: 100vw;
       height: auto;
+      min-height: auto;
+    }
+
+    article {
+      contain: content;
     }
 
     main#casestudy,
@@ -531,14 +549,10 @@
       font-display: swap;
     }
 
-    .article-global-container {
-      padding: .2em
-    }
-
     .author-bio-container,
     .cta-section,
     .grade-img,
-    .article-global-container,
+    article,
     .project-images {
       padding: .2em;
     }
@@ -825,13 +839,6 @@
       max-width: 96vw;
       height: auto;
       padding: .9375em 0
-    }
-
-    .article-global-container,
-    .resume-border {
-      width: 100%;
-      max-width: 100vw;
-      height: auto;
     }
 
     #collections-buttongrid {
