--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -37,6 +37,19 @@ html {
   overflow-x: hidden
 }
 
+body {
+  max-width: 100vw;
+  min-height: 100rem;
+  contain: layout;
+}
+
+header {
+  width: 100%;
+  max-width: 100vw;
+  height: auto;
+  min-height: 10rem;
+}
+
 html {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
