--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -313,7 +313,7 @@
   }
 
   .wireframe-img {
-    min-height: 100vh;
+    min-height: auto;
   }
 
   #pagespeed {
@@ -656,6 +656,8 @@
     .wireframe {
       width: 90%;
       max-width: 90vw;
+      height: auto;
+      min-height: auto;
       gap: 1em;
     }
 
