--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -27,6 +27,8 @@ body {
   display: flex;
   flex-direction: column;
   max-width: 100vw;
+  contain: layout;
+  min-height: 100vw;
 
 }
 
@@ -37,11 +39,10 @@ html {
   overflow-x: hidden
 }
 
-body {
-  max-width: 100vw;
-  min-height: 100rem;
-  contain: layout;
+.hidden {
+  display: none !important;
 }
+
 
 header {
   width: 100%;
@@ -287,14 +288,15 @@ nav {
 }
 
 .nav-logo {
-  max-width: 12vw;
-  max-height: auto;
+  max-width: 200px;
+  max-height: 100px;
   overflow: hidden;
   height: auto;
   justify-content: center;
   align-items: center;
   background-color: #000;
   margin-left: 1em;
+  padding: .5em;
 }
 
 .nav-logo img {
@@ -302,7 +304,6 @@ nav {
   height: auto;
   display: block;
   object-fit: contain;
-  padding: 1em;
 }
 
 .footer-logo {
@@ -519,7 +520,6 @@ footer {
 .click-me,
 #back-to-top,
 #side-nav ul li a {
-  display: block;
   padding: .5em;
   background-color: #000;
   color: #fff;
@@ -592,7 +592,6 @@ footer {
 .takeme-text {
   min-height: 48px;
 }
-
 
 .project-links {
   min-height: 6rem;
@@ -849,20 +848,6 @@ button.submit-button:hover {
 }
 
 @media (max-width:768px) {
-
-  .nav-logo {
-    max-height: 80px;
-    margin-left: 2em;
-    overflow: hidden
-  }
-
-  .nav-logo img {
-    width: 100%;
-    height: 100%;
-    min-height: 5rem;
-    object-fit: contain;
-    display: block
-  }
 
   .nav-links {
     display: none
