--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -47,6 +47,16 @@ html {
   -webkit-font-smoothing: antialiased
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 100vw;
+  min-height: 100vh;
+  /* match vertical height */
+  overflow-x: hidden;
+}
+
 body,
 h1,
 h2 {
