--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -239,8 +239,9 @@
     min-height: 100vh;
   }
 
-  .vision picture {
-    max-width: 814px;
+
+  .parent-tech-ss picture {
+    max-width: 900px;
   }
 
   #description {
@@ -248,15 +249,11 @@
   }
 
   .past-meets-future picture {
-    max-width: 659px;
+    max-width: 900px;
   }
 
   .vision picture {
     max-width: 900px;
-  }
-
-  .past-meets-future picture {
-    max-width: 659px;
   }
 
   #hubspot-img picture {
