--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -1,3 +1,4 @@
+  main#parent-tech,
   main#casestudy,
   main#projects {
     width: 54%;
@@ -19,6 +20,10 @@
 
   main#casestudy {
     min-height: 490rem;
+  }
+
+  main#parent-tech {
+    min-height: 380rem;
   }
 
   .casestudy {
