--- a/styles/styles-index.css
+++ b/styles/styles-index.css
@@ -2,27 +2,44 @@
   display: flex;
   margin: 0 auto;
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   height: auto;
   padding: 6em 0 1em;
-  justify-content: center;
-  text-align: center
-}
-
-.main-title h1 {
-  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
-  font-size: clamp(2rem, 3vw, 3rem);
-  height: auto;
 }
 
-.main-title a {
+.main-title h1 {
+  font-size: clamp(2rem, 3vw, 3rem);
+  height: auto;
+  min-height: 3rem;
+  padding-bottom: 1rem;
+  color: black;
+  text-shadow: 0 0 0.8px cyan, 0 0 1.5px cyan;
+  transition: color 0.3s ease, text-shadow 0.3s ease;
+}
+
+.main-title p {
+  font-size: clamp(1rem, 2vw, 2rem);
+  color: black;
+  text-shadow: 0 0 0.8px cyan, 0 0 1.5px cyan;
+  transition: color 0.3s ease, text-shadow 0.3s ease;
+}
+
+.main-title {
   text-decoration: none;
   color: #000;
   text-decoration: underline solid cyan
+}
+
+.desktop-version {
+  display: block;
+}
+
+.mobile-version {
+  display: none;
 }
 
 .design-container {
@@ -126,7 +143,8 @@
 .animation-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center
+  justify-content: center;
+  padding-top: 5rem;
 }
 
 .headshot,
@@ -176,36 +194,93 @@
 }
 
 @media (max-width:768px) {
+  .project-title {
+    width: 90%;
 
+  }
+
+  .desktop-version {
+    display: none;
+  }
+
+  .mobile-version {
+    display: block;
+  }
+
+  .main-title {
+    padding: 2em 0 4em;
+  }
+
+  .main-title h1 {
+    font-size: 1.5rem;
+  }
+
+  .main-title p {
+    padding-bottom: 2rem;
+  }
+
+  .design-container {
+    padding: 0 1rem;
+  }
+
+  .coder-container,
+  .designer-box {
+    align-items: start;
+    justify-content: flex-start;
+  }
+
+  .designer-box,
   .coder-box,
   .coder-container,
-  .design-container,
-  .designer-box {
+  .design-container {
     width: 100%;
-    max-width: 100vw
+    max-width: 100vw;
   }
 
   .headshot-container {
-    align-items: last baseline
+    margin: 1.5em 0 0;
   }
 
-  .headshot img,
-  .headshot-animated img,
   .headshot-container img {
-    padding: 0
+    padding: 0;
+  }
+
+  .coder-box,
+  .designer-box {
+    padding: 0.5em;
+  }
+
+  .headshot-container {
+    align-items: last baseline;
+  }
+
+  .headshot {
+    display: none;
+  }
+
+  .headshot-animated {
+    display: flex;
+    opacity: 1;
+    position: static;
+    animation: none;
   }
 
   .coder-box h2,
   .designer-box h2 {
-    font-size: clamp(1.125rem, 2vw, 1.5rem);
-    height: auto
+    font-size: 1.2rem;
+    padding-top: 0.2em;
+    line-height: 1.2;
   }
 
   .coder-box h3,
   .designer-box h3 {
-    font-size: clamp(1rem, 1.5vw, 1rem);
-    height: auto;
-    min-height: 1rem
+    font-size: 1rem;
+    line-height: 1.2;
+    padding-top: 0.5em;
+  }
+
+  .headshot-container {
+    align-items: last baseline
   }
 
 }
