explicitly set a font-size for <h1> tags because of the new chrome rules

--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -49,8 +49,14 @@ body {
   width: 100%;
   max-width: 100vw;
   min-height: 100vh;
-  /* match vertical height */
   overflow-x: hidden;
+}
+
+section h1,
+article h1,
+nav h1,
+aside h1 {
+  font-size: 2rem;
 }
 
 body,
