--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -52,10 +52,10 @@ body {
   overflow-x: hidden;
 }
 
-section h1,
-article h1,
-nav h1,
-aside h1 {
+section h1:not([class]),
+article h1:not([class]),
+nav h1:not([class]),
+aside h1:not([class]) {
   font-size: 2rem;
 }
 
