--- a/styles/styles-index.css
+++ b/styles/styles-index.css
@@ -1,3 +1,19 @@
+main#index-pg {
+  width: 100%;
+  max-width: 100vw;
+  margin: 0 auto;
+  box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1);
+  contain: layout paint style;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  overflow-anchor: none;
+}
+
+main#index-pg {
+  min-height: 50rem;
+}
+
 .main-title {
   display: flex;
   margin: 0 auto;
@@ -9,6 +25,7 @@
   align-items: center;
   flex-direction: column;
   text-align: center;
+  min-height: 60px;
 }
 
 .main-title h1 {
@@ -145,6 +162,7 @@
   flex-wrap: wrap;
   justify-content: center;
   padding-top: 5rem;
+  min-height: 230px;
 }
 
 .headshot,
