--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,19 @@
-.skills-main {
-  width: 100%;
-  max-width: 100vw;
-  margin: auto;
+#skills-pages {
   position: relative;
-  padding-bottom: 10vh;
-  margin-top: 4vh;
-  padding-bottom: 10vh;
+  box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1);
+  contain: layout paint style;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  overflow-anchor: none;
 }
 
-
-.about-me {
-  margin: 0 auto;
+main #skills-pages {
   max-width: 52vw;
   width: 52%;
   height: auto;
   min-height: unset;
   position: relative;
-  padding-bottom: 10rem;
   contain: layout;
   overflow: hidden;
   padding: 0.2em;
@@ -52,7 +49,7 @@
   align-items: center;
   justify-content: center;
   background-color: black;
-  margin: 0 auto;
+  margin: 4rem auto 8rem;
   height: auto;
   max-height: 100%;
   padding: 3em;
